--- a/distributions.html
+++ b/distributions.html
@@ -23,13 +23,13 @@
     <!-- Dropdown Navigation -->
 
     <select id="chartType"
-        style="border: none; padding: 10px 10px; text-align: center; font-variant:small-caps; font-family: sans-serif; font-size: medium; font-weight: 500">
-        <option value="mono">monodisperse, pdi = 1.01</option>
-        <option value="norm">gaussian, pdi = 1.93</option>
-        <option value="normL">right skew gaussian, pdi = 1.36</option>
-        <option value="normR">left skew gaussian, pdi = 1.79</option>
-        <option value="bimod">bimodal, pdi = 3.41</option>
-        <option value="poly">polymodal, pdi = 2.45</option>
+        style="border: none; padding: 10px 10px; text-align: center; font-family: sans-serif; font-size: smaller; font-weight: 500">
+        <option value="mono">Monodisperse, PDI = 1.01</option>
+        <option value="norm">Gaussian, PDI = 1.93</option>
+        <option value="normL">Right Skew Gaussian, PDI = 1.36</option>
+        <option value="normR">Left Skew Gaussian, PDI = 1.79</option>
+        <option value="bimod">Bimodal, PDI = 3.41</option>
+        <option value="poly">Polymodal, PDI = 2.45</option>
     </select>
 
     <!-- ChartJS 'Bar'/'Line' -->
