--- a/carothers.html
+++ b/carothers.html
@@ -11,6 +11,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-annotation/0.5.7/chartjs-plugin-annotation.js"></script>
+    <script src="https://unpkg.com/mathjs/lib/browser/math.js"></script>
 </head>
 
 <body>
@@ -47,8 +48,9 @@
     <form id="rValue" action="">
         <fieldset>
             <p>
-                <label for="r">Ratio of Reactant Monomers, <i>r</i></label>
-                <input id="r" name="r" type="number" min="0.0" max="1.0" step="0.01" placeholder="1.00" />
+                <label for="r">Ratio of Reactant Monomers, (0.00 ≥ <i>r</i> > 1.00) </label>
+                <input id="r" name="r" type="number" min="0.0" max="0.999" step="0.01" placeholder="0"
+                    onkeydown="return false" value='0' />
             </p>
         </fieldset>
     </form>
@@ -73,62 +75,119 @@
             x: 0.00,
             y: 1.00
         }, {
+            x: 0.05,
+            y: 1.00
+        }, {
+            x: 0.10,
+            y: 1.00
+        }, {
+            x: 0.15,
+            y: 1.00
+        }, {
             x: 0.20,
-            y: 1.25
+            y: 1.00
+        }, {
+            x: 0.25,
+            y: 1.00
+        }, {
+            x: 0.30,
+            y: 1.00
+        }, {
+            x: 0.40,
+            y: 1.00
+        }, {
+            x: 0.45,
+            y: 1.00
         }, {
             x: 0.50,
-            y: 2.00
+            y: 1.00
+        }, {
+            x: 0.55,
+            y: 1.00
         }, {
             x: 0.60,
-            y: 2.50
+            y: 1.00
+        }, {
+            x: 0.65,
+            y: 1.00
+        }, {
+            x: 0.70,
+            y: 1.00
         }, {
             x: 0.75,
-            y: 4.00
+            y: 1.00
         }, {
             x: 0.80,
-            y: 5.00
+            y: 1.00
+        }, {
+            x: 0.81,
+            y: 1.00
+        }, {
+            x: 0.82,
+            y: 1.00
+        }, {
+            x: 0.83,
+            y: 1.00
+        }, {
+            x: 0.84,
+            y: 1.00
+        }, {
+            x: 0.85,
+            y: 1.00
+        }, {
+            x: 0.86,
+            y: 1.00
+        }, {
+            x: 0.87,
+            y: 1.00
+        }, {
+            x: 0.88,
+            y: 1.00
+        }, {
+            x: 0.89,
+            y: 1.00
         }, {
             x: 0.90,
-            y: 10.0
+            y: 1.00
         }, {
             x: 0.91,
-            y: 11.111
+            y: 1.00
         }, {
             x: 0.92,
-            y: 12.500
+            y: 1.00
         }, {
             x: 0.93,
-            y: 14.286
+            y: 1.00
         }, {
             x: 0.94,
-            y: 16.667
+            y: 1.00
         }, {
             x: 0.95,
-            y: 20.000
+            y: 1.00
         }, {
             x: 0.96,
-            y: 25.000
+            y: 1.00
         }, {
             x: 0.97,
-            y: 33.333
+            y: 1.00
         }, {
             x: 0.98,
-            y: 50.000
+            y: 1.00
         }, {
             x: 0.99,
-            y: 100.000
+            y: 1.00
         }, {
             x: 0.9999,
-            y: 1000.000
+            y: 1.00
         }]
 
-        $('#r').on("keypress", (event) => {
-            if (event.which === 13) {
+        $('#r').on("click", (event) => {
+            if (event.which === 1) {
                 event.preventDefault();
                 const rValue = parseFloat(event.target.value);
                 dataPoints = dataPoints.map(point => {
                     point.x = parseFloat(point.x);
-                    const y = (1 + rValue) / (1 + rValue - (2 * rValue * point.x));
+                    const y = math.round(((1 + rValue) / (1 + rValue - (2 * rValue * point.x))),5);
 
                     return {
                         x: point.x,
@@ -156,8 +215,8 @@
                         }]
                     },
                     options: {
-                        tooltips: { enabled: false },
-                        hover: { mode: null },
+                        tooltips: { enabled: true },
+                        // hover: { mode: null },
                         animation: {
                             duration: 0
                         },
@@ -170,10 +229,10 @@
                                     display: true,
                                     labelString: 'X\u2099'
                                 },
-                                ticks: {
-                                    min: 0,
-                                    max: 200
-                                }
+                                // ticks: {
+                                //     min: 0,
+                                //     max: 200
+                                // }
                             }],
                             xAxes: [{
                                 scaleLabel: {
@@ -208,8 +267,8 @@
                 }]
             },
             options: {
-                tooltips: { enabled: false },
-                hover: { mode: null },
+                tooltips: { enabled: true },
+                // hover: { mode: null },
                 animation: {
                     duration: 0
                 },
@@ -219,10 +278,10 @@
                             display: true,
                             labelString: 'X\u2099'
                         },
-                        ticks: {
-                            min: 0,
-                            max: 200
-                        }
+                        // ticks: {
+                        //     min: 0,
+                        //     max: 200
+                        // }
                     }],
                     xAxes: [{
                         scaleLabel: {
