--- a/mayo-lewis.html
+++ b/mayo-lewis.html
@@ -311,8 +311,8 @@
                         }]
                     },
                     options: {
-                        tooltips: { enabled: false },
-                        hover: { mode: null },
+                        tooltips: { enabled: true },
+                        // hover: { mode: null },
                         animation: {
                             duration: 0
                         },
@@ -359,8 +359,8 @@
                 }]
             },
             options: {
-                tooltips: { enabled: false },
-                hover: { mode: null },
+                tooltips: { enabled: true },
+                // hover: { mode: null },
                 animation: {
                     duration: 0
                 },
